# cs4395-portfolio

./: 404.html  data.json  index.html  package.json  tailwind.config.js
assignments/cs4395_portfolio_chatbot/chatbot_code/: main.py  pyproject.toml  replit_zip_error_log.txt  user.p  web_crawler.py
assignments/cs4395_portfolio_chatbot/chatbot_code/clean_text/: Andromeda Galaxy Facts - Space Facts  Asteroid Belt Facts - Interesting Facts about the Asteroid Belt  Asteroid Facts - Interesting Facts about Asteroids  Deimos (Moon) Facts  Enceladus (Moon) Facts  Eris (Dwarf Planet) Facts  Europa (Moon) Facts  Galaxy Facts - Interesting Facts about Galaxies  Ganymede (Moon) Facts  Io (Moon) Facts  Kuiper Belt Facts - Interesting Facts about the Kuiper Belt  Mars Facts - Interesting Facts about Planet Mars  Messier 87 Galaxy (M87) Facts  Meteor Shower Facts - Interesting Facts about Meteor Showers  Meteorite Facts - Interesting Facts about Meteorites  Milky Way Galaxy Facts 🌌 - Space Facts  Moon Facts 🌘 - Interesting Facts about the Earth's Moon  Neptune Facts - Interesting Facts about Planet Neptune  Oort Cloud Facts - Interesting Facts about the Oort Cloud  Phobos (Moon) Facts  Solar System Facts - Interesting Facts about the Solar System  Sun Facts ☀ - Interesting Facts about the Sun  Titan (Moon) Facts  Triangulum Galaxy Facts  Types of Galaxies - Spiral, Elliptical & Irregular Galaxies  Uranus Facts - Interesting Facts about Planet Uranus  Whirlpool Galaxy Facts - Space Facts
assignments/cs4395_portfolio_chatbot/chatbot_code/knowledge_base/: andromeda  belt  cloud  eris  (+19 more)
(+169 files in other folders)
